apps/mealie/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
spec:
  selector:
    matchLabels:
      app: mealie
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: "ghcr.io/mealie-recipes/mealie"
          resources:
            limits:
              memory: "1000Mi"
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /app/data
              name: mealie-content
      volumes:
        - name: mealie-content
          persistentVolumeClaim:
            claimName: mealie-claim
