apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
spec:
  selector:
    app: mealie
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
