apps/mealie/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.joejad.com`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
